# dplane-rpc

./: .gitignore  Cargo.toml  README.md  build.rs  test.sh
.github/workflows/: test.yml
clib/: .clang-format  CMakeLists.txt  README.md  indent.sh
clib/src/: CMakeLists.txt  buffer.c  buffer.h  common.c  common.h  display.c  display.h  dp_msg.c  dp_msg.h  dp_objects.c  dp_objects.h  dp_types.h  dplane-rpc.h  errors.h  fmt_buff.c  fmt_buff.h  proto.h  vec.c  vec.h  wire.c  wire.h
clib/test/: CMakeLists.txt  object_builders.c  object_builders.h  test_buffer.c  test_common.h  test_fmt_buff.c  test_vec.c  test_wire.c
include/: dplane-rpc.h
src/: lib.rs  log.rs  msg.rs  objects.rs  proto.rs  socks.rs  tests.rs  traits.rs  wire.rs
