[package]
name = "dplane-rpc"
version = "1.0.0"
edition = "2021"

[dependencies]
bytes = {version = "1.9.0", features = ["serde"] }
num-traits = "0.2"
num-derive = "0.4"
mac_address= {version = "1.1.7"}
log = {version = "0.4.22"}
tracing = { version = "0.1.40", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3.18" }
tracing-test = { version = "0.2.5" }


[build-dependencies]
cbindgen = {version = "0.27.0"}
